# AINM2026

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  pyproject.toml
.claude/skills/: c1-improve.md
challenge1/: README.md  Tripletex API 2.0.html  agent.py  api_context.py  api_endpoints.txt  api_reference.md  api_schemas.py  api_schemas.txt  deploy.sh  executor.py  generate_tools.py  planner.py  requirements.txt  research.md  server.py  show_traces.sh  test_local.py  tools.py  trace.py  trace_tracker.md  tripletex.py
challenge1/Tripletex API 2.0_files/: material-icons-outlined.css  tlx-swagger.css
challenge2/: README.md  best.onnx  best.pt  best.torchscript  best_compat.pt  classifier.onnx  classifier.onnx.data  classifier.pt  classifier_refs.pt  dino_embed.onnx  embed_references.py  embed_references_v2.py  eval.py  export_classifier.py  extract_crops.py  hpo.py  prepare_data.py  ref_cat_ids.npy  ref_embeddings.npy  reference_embeddings.npz  research.md  run.py  run_yolo_mc.py  save_model_weights.py  train.py  train_classifier.py  vit_small_patch14_dinov2_lvd142m.pth  yolo_mc.onnx  yolo_multiclass_best.pt
challenge3/: README.md  api.py  build_dataset.py  context.md  evaluate.py  model.py  observed_r5_s0.npy  observed_r5_s1.npy  observed_r5_s2.npy  observed_r5_s3.npy  observed_r5_s4.npy  research.md  solver.py
research/: competition_history.md
shared/: __init__.py  utils.py
